--- a/tutorial_thorskyclasses.ipynb
+++ b/tutorial_thorskyclasses.ipynb
@@ -272,7 +272,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The events of a single night -- sunset, sunrise, twilights, and so on -- are computed with the ```setnightevents``` method.  The times are astropy ```Time```s.  To be easily intelligible as local times they can be converted to python datetimes; I've also provided a function ```time_rounded_to_minute``` that rounds off these rather ragged events (refraction variations near the horizon make rise-set times imprecise).  The night computed switches over around local noon; before that, the events are for the previous night.  "
+    "The events of a single night -- sunset, sunrise, twilights, and so on -- are computed with the ```setnightevents``` method.  The times are astropy ```Time```s.  To be easily intelligible as local times they can be converted to python datetimes; I've also provided a function ```time_rounded_to_minute``` that rounds off these rather ragged events (refraction variations near the horizon make rise-set times imprecise).  The night for which the events are computed changes over around local noon, so if the time given by ```t``` is in the wee hours of the morning, the events are computd for the correct night.  "
    ]
   },
   {
@@ -347,7 +347,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, barycentric corrections are computed with ```computebary```, which also creates an attribute ```tbary`` which is the same as ```t``` but with the time correction added.  Note the unit conversions forced here with the ```to``` method."
+    "Finally, barycentric corrections are computed with ```computebary```, which also creates an attribute ```tbary``` which is the same as ```t``` but with the time correction added.  Note the unit conversions forced here with the quantity's ```to``` method."
    ]
   },
   {
@@ -376,14 +376,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Note carefully** that ```tbary``` is not in TDB, or barycentric dynamical time.  It is most likely in the UTC time system (civil clocks follow this) but with a light-travel time correction added.  TDB is an entirely different kettle of fish, offset these days by 69 seconds from UTC and not necessarily corrected for light-travel time.  Aside from the large constant offset, it's different from UTC in that it is a uniform time scale, whereas UTC has leap seconds added from \n",
+    "**Note carefully** that ```tbary``` is **not in TDB**, or barycentric dynamical time.  It is most likely in the UTC time system (civil clocks follow this) but with a light-travel time correction added.  TDB is an entirely different kettle of fish, offset these days by 69 seconds from UTC and not necessarily corrected for light-travel time.  Aside from the large constant offset, it's different from UTC in that it is a uniform time scale, whereas UTC has leap seconds added from \n",
     "tme to time.  TDB does *not* include a correction for light-travel time in and of itself.  As I understand it, it represents the rate of a clock fixed at the earth's mean gravitational potential with respect to the sun.  Time on the real earth has gets ahead and behind this because of the gravitational time dilation changes through the year due to the earth's eccentric orbit around the sun.  This term is of order 1.6 milliseconds, and as far as I know is only practically significant in millisecond pulsar timing.  \n",
     "\n",
     "In any case, the light travel time correction ```tbary``` should represent accurately the extra time needed for a plane wave of light to make its way to the solar system barycenter, compared to when you observe it.  ```astropy``` provides ways of converting your time to TDB if needed, and the time-of-flight correction from earth-based time to arrival time at the solar system barycenter should be nearly identical in the UTC or TDB systems.\n",
     "\n",
     "### Summary output methods\n",
     "\n",
-    "Although the thrust of this work is as a basis for a python skycalc, there are two methods to generate human-readable output that have been used mostly for testing.  They are ```printnow``` and ```printnight```, as follows:"
+    "Although the main motivation of this work is as a basis for a python skycalc, there are two methods to generate human-readable output that have been used mostly for testing.  They are ```printnow``` and ```printnight```, as follows:"
    ]
   },
   {
@@ -472,7 +472,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that **the order in which you call the methods is important**; after setting the input parameters, you first ```computesky``` so you know the sidereal time and some other parameters, then ```computesunmoon```, then ```setnightevents``` and/or ```computeplanets```.  This makes sense; you don't need to know where the moon is to find the airmass, for example. "
+    "Note that **the order in which you call the methods is important**; after setting the input parameters, you first ```computesky``` to compute the sidereal time and some other parameters, then ```computesunmoon```, then ```setnightevents``` and/or ```computeplanets```.  This makes sense; you don't need to compute where the moon is to find the airmass, for example. "
    ]
   },
   {
