:Added setup.py

--- a/tutorial_thorskyclasses.ipynb
+++ b/tutorial_thorskyclasses.ipynb
@@ -39,17 +39,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RA:  8 02 43.76 ,  dec:  +31 57 00.0\n",
+      "RA:  13 39 37.14 ,  dec:  +31 57 00.0\n",
       "fk5 J2018.680\n",
       "Kitt Peak [MDM Obs] -111d36m59.9916s 31d56m59.9839s\n",
-      "Tue  2018-09-04  16:34:11  UT\n"
+      "Wed  2018-09-05  22:06:14  UT\n"
      ]
     },
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -111,19 +111,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'celest' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-3a7f069795d6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mobs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msetcelest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"18:22:22.23  -14:15:17.9  1950.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m print(\"RA: \",obs.celest.ra.to_string(unit = u.hourangle, sep = ' ',precision=2), \",  dec: \",\n\u001b[1;32m      3\u001b[0m       obs.celest.dec.to_string(sep = ' ', precision = 1, pad = True, alwayssign=True))\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcelest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcelest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mequinox\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\" \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Escritorio/pyskycalc/pyskycalc/thorskyclasses3.py\u001b[0m in \u001b[0;36msetcelest\u001b[0;34m(self, celestin, ra_unit, dec_unit)\u001b[0m\n\u001b[1;32m    291\u001b[0m                    \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcelest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSkyCoord\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcelestin\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcelestin\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0munit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mra_unit\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdec_unit\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mframe\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFK5\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mequinox\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0meq\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    292\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcelestin\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m:\u001b[0m   \u001b[0;31m# str includes unicode in python3.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 293\u001b[0;31m             \u001b[0mpieces\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcelest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplitin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    294\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpieces\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m6\u001b[0m \u001b[0;34m:\u001b[0m  \u001b[0;31m# space-separated fields - glue back together.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    295\u001b[0m                 \u001b[0mrastr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpieces\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\":\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mpieces\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\":\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mpieces\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'celest' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RA:  18 22 22.23 ,  dec:  -14 15 17.9\n",
+      "fk5 J1950.000\n",
+      " \n",
+      "RA:  14 14 02.40 ,  dec:  +15 15 00.0\n",
+      "icrs\n",
+      " \n",
+      "RA:  1 09 18.00 ,  dec:  +28 33 52.0\n",
+      "icrs\n"
      ]
     }
    ],
@@ -157,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +168,7 @@
      "text": [
       "Fri  2018-09-14  03:14:15\n",
       " \n",
-      "Tue  2018-09-04  03:14:15\n",
+      "Fri  2018-09-14  03:14:15\n",
       " \n",
       "Fri  2018-09-14  13:14:15\n"
      ]
@@ -196,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -246,11 +248,11 @@
       "sun alt az: -1.04857rad 3.54309rad\n",
       "twilight in magnitudes: 0.0\n",
       "moon: <SkyCoord (PrecessedGeocentric: equinox=J2018.700, obstime=J2000.000, obsgeoloc=( 0.,  0.,  0.) m, obsgeovel=( 0.,  0.,  0.) m / s): (ra, dec) in deg\n",
-      "    ( 231.92462228, -13.4770257)>\n",
-      "moon alt az: -0.15255rad 4.33415rad\n",
+      "    ( 231.92840859, -13.47898109)>\n",
+      "moon alt az: -0.152478rad 4.33416rad\n",
       "obs.moonphasedescr: 2.4 days before first quarter\n",
       "obs.lunsky (lunar sky brightness in mag/sq arcsec): 99.0\n",
-      "obs.moonillumfrac, obs.moonobjang: 0.2608289864385164 144d42m57.1113s\n"
+      "obs.moonillumfrac, obs.moonobjang: 0.26085961210110264 144d42m49.3765s\n"
      ]
     }
    ],
@@ -275,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -350,16 +352,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "obs.barytcorr in seconds:  77.84495121886842 s\n",
-      "obs.baryvcorr in km/s: -15.841610801902883 km / s\n",
-      "obs.t.jd:  2458365.602629282  obs.tbary.jd:  2458365.6035302654\n"
+      "obs.barytcorr in seconds:  385.5183655035835 s\n",
+      "obs.baryvcorr in km/s: 16.137223010492605 km / s\n",
+      "obs.t.jd:  2458376.0515625  obs.tbary.jd:  2458376.0560245183\n"
      ]
     }
    ],
@@ -386,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -442,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -484,7 +486,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sunset (UT): 2018-09-04 07:49:16.205158    Sunrise (UT):  2018-09-04 20:15:44.691036\n"
+      "Sunset (UT): 2018-09-14 07:55:02.342220    Sunrise (UT):  2018-09-14 20:03:02.664775\n"
      ]
     },
     {
@@ -501,6 +503,15 @@
     "obs.setnightevents()\n",
     "print('Sunset (UT):', obs.tsunset, '   Sunrise (UT): ',obs.tsunrise)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
